--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -1,7 +1,9 @@
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Raspberry Pi - Sensor Data</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Raspberry Pi - Sensor Data</title>
+<link rel="shortcut icon" href="http://www.raspberrypi.org/favicon.ico" type="image/vnd.microsoft.icon"/>
+<link rel="icon" href="http://www.raspberrypi.org/favicon.ico" type="image/x-ico"/>
 <style>
 body {
   font: 10px sans-serif;
