--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -36,7 +36,6 @@ body {
   stroke: silver;
   shape-rendering: crispEdges;
 }
-
 </style>
 </head>
 <body>
@@ -48,8 +47,8 @@ var margin = {
     bottom: 30,
     left: 50
 },
-width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+width = 1024 - margin.left - margin.right,
+height = 400 - margin.top - margin.bottom;
 
 var parseDate = d3.time.format("%Y-%m-%d %X").parse;
 
@@ -58,6 +57,8 @@ var x = d3.time.scale()
 
 var y = d3.scale.linear()
     .range([height, 0]);
+
+y.ticks(0.1);
 
 var xAxis = d3.svg.axis()
     .scale(x)
