--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -18,10 +18,10 @@
     <h2>DHT22 / AM2302 - Humidity</h2>
     <div class="dht22hum"></div>
 
-    <script>
-    showChart( "div.ds18b20", 1, 8, "Temperature (°C)" );
-    showChart( "div.dht22temp", 2, 8, "Temperature (°C)" );
-    showChart( "div.dht22hum", 3, 8, "Humidity (%)" );
+    <script type="text/javascript">
+        showChart( "div.ds18b20", 1, 8, "Temperature (°C)" );
+        showChart( "div.dht22temp", 2, 8, "Temperature (°C)" );
+        showChart( "div.dht22hum", 3, 8, "Humidity (%)" );
     </script>
 </body>
 </html>
