--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="http://www.raspberrypi.org/favicon.ico" type="image/x-ico"/>
         <link rel="stylesheet" href="./chart-sensor.css" type="text/css" />
         <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-        <script type="text/javascript" src=".chart-sensor.js" charset="utf-8"></script>
+        <script type="text/javascript" src="./chart-sensor.js" charset="utf-8"></script>
     </head>
 <body>
     <h2>DS18B20 - Temperature</h2>
