--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -2,8 +2,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Raspberry Pi - Sensor Data</title>
-        <link rel="shortcut icon" href="http://www.raspberrypi.org/favicon.ico" type="image/vnd.microsoft.icon"/>
-        <link rel="icon" href="http://www.raspberrypi.org/favicon.ico" type="image/x-ico"/>
+        <link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon"/>
+        <link rel="icon" href="./favicon.ico" type="image/x-ico"/>
         <link rel="stylesheet" href="./chart-sensor.css" type="text/css" />
         <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script type="text/javascript" src="./chart-sensor.js" charset="utf-8"></script>
