--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -5,16 +5,17 @@
         <link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon"/>
         <link rel="icon" href="./favicon.ico" type="image/x-ico"/>
         <link rel="stylesheet" href="./chart-sensor.css" type="text/css" />
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script type="text/javascript" src="./chart-sensor.js" charset="utf-8"></script>
     </head>
 <body>
 
     Time frame: <select id="period">
-    <option value="1">1 Hour</option>
+    <option value="1" selected>1 Hour</option>
     <option value="2">2 Hour</option>
     <option value="4">4 Hour</option>
-    <option value="8" selected>8 Hour</option>
+    <option value="8">8 Hour</option>
     <option value="12">12 Hour</option>
     <option value="16">16 Hour</option>
     <option value="20">20 Hour</option>
@@ -37,10 +38,10 @@
             showChart( "div.dht22hum", 3, period, "Humidity (%)" );
         }
 
-        updateChart( 8 );
+        updateChart( 1 );
 
         $('#period').change(function() {
-            alert( 'Changed'.$(this).val() );
+            updateChart( $(this).val() );
         });
     </script>
 </body>
