--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -10,7 +10,6 @@
         <script type="text/javascript" src="./chart-sensor.js" charset="utf-8"></script>
     </head>
 <body>
-
     Time frame: <select id="period">
     <option value="1" selected>1 Hour</option>
     <option value="2">2 Hour</option>
@@ -21,6 +20,7 @@
     <option value="20">20 Hour</option>
     <option value="24">24 Hour</option>
     </select>
+    <button id="refresh">Refresh</button>
 
     <h2>DS18B20 - Temperature</h2>
     <div class="ds18b20"></div>
@@ -42,6 +42,9 @@
 
         $('#period').change(function() {
             updateChart( $(this).val() );
+        });
+        $('#refresh').click(function() {
+            updateChart( $('#period').val() );
         });
     </script>
 </body>
