--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -12,13 +12,13 @@
 <body>
     Time frame: <select id="period">
     <option value="1" selected>1 Hour</option>
-    <option value="2">2 Hour</option>
-    <option value="4">4 Hour</option>
-    <option value="8">8 Hour</option>
-    <option value="12">12 Hour</option>
-    <option value="16">16 Hour</option>
-    <option value="20">20 Hour</option>
-    <option value="24">24 Hour</option>
+    <option value="2">2 Hours</option>
+    <option value="4">4 Hours</option>
+    <option value="8">8 Hours</option>
+    <option value="12">12 Hours</option>
+    <option value="16">16 Hours</option>
+    <option value="20">20 Hours</option>
+    <option value="24">24 Hours</option>
     </select>
     <button id="refresh">Refresh</button>
 
