Added 48hrs as option

--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -19,6 +19,7 @@
     <option value="16">16 Hours</option>
     <option value="20">20 Hours</option>
     <option value="24">24 Hours</option>
+    <option value="48">48 Hours</option>
     </select>
     <button id="refresh">Refresh</button>
 
