Added Apple Touch icons

--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -4,6 +4,10 @@
         <title>Raspberry Pi - Sensor Data</title>
         <link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.icon"/>
         <link rel="icon" href="./favicon.ico" type="image/x-ico"/>
+        <link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" /> 
+        <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-ipad.png" /> 
+        <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-iphone4.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-ipad3.png" />
         <link rel="stylesheet" href="./chart-sensor.css" type="text/css" />
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
