--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -77,6 +77,8 @@
                 // Add or remove html related stuff
                 if ( $optSensor == 0 || $optSensor == i ) {
                     // Include chart
+                    $('h2.'+$className).show();
+                    $('div.'+$className).show();
                     updateSensorChart( i, $optPeriod );
                 } else {
                     // Exclude chart
