Work in progress

--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -38,19 +38,19 @@
 
     <div class="charts">
         <h2 class="chart1">DS18B20 - Temperature</h2>
-        <div class="chart1"></div>
+        <div class="chart1 charting"></div>
 
         <h2 class="chart2">DHT22 - Temperature</h2>
-        <div class="chart2"></div>
+        <div class="chart2 charting"></div>
 
         <h2 class="chart3">DHT22 - Humidity</h2>
-        <div class="chart3"></div>
+        <div class="chart3 charting"></div>
 
         <h2 class="chart4">RPi CPU - Temperature</h2>
-        <div class="chart4"></div>
+        <div class="chart4 charting"></div>
 
         <h2 class="chart5">RPi GPU - Temperature</h2>
-        <div class="chart5"></div>
+        <div class="chart5 charting"></div>
     </div>
 
     <script type="text/javascript">
