--- a/chart-sensor.html
+++ b/chart-sensor.html
@@ -88,6 +88,11 @@
             }
         });
 
+        // Refresh when button is clicked
+        $('#refresh').click(function() {
+            $('select').trigger('change');
+        }
+
         // Force refresh when page is loaded for the first time
         $('select').trigger('change');
     </script>
